# chatbot-py

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  chatbot.py  cli.py  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
chatbot_py/: __init__.py  chatbot.py  types.py
chatbot_py/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  ollama_provider.py  openai_provider.py
docs/: ARCHITECTURE.md  PROVIDERS.md
examples/: basic.py  multi_provider.py  rag_minimal.py  streaming.py  system_prompts.py
src/: App.tsx  index.css
src/components/: BankAccountForm.tsx  Footer.tsx  MainMenu.tsx  RegistrationForm.tsx  WhatsAppShare.tsx
src/pages/: Index.tsx  NotFound.tsx  ProfilePage.tsx
tests/: conftest.py  test_chatbot.py  test_providers.py
