[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-py"
version = "0.2.0"
description = "Open-source multi-provider LLM chatbot in Python — Claude · GPT · Gemini · Ollama. Streamlit UI + CLI + library."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kukuh Laksana", email = "14934568+kwkuh@users.noreply.github.com" }]
keywords = [
    "chatbot", "llm", "ai", "claude", "gpt", "gemini", "anthropic", "openai",
    "google", "ollama", "streamlit", "chatgpt", "generative-ai", "open-source",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.50.0"]
google    = ["google-genai>=0.3.0"]
ollama    = ["ollama>=0.6.2"]
ui        = ["streamlit>=1.36.0"]
all       = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    "ollama>=0.6.2",
    "streamlit>=1.36.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
]

[project.urls]
Homepage      = "https://github.com/kwkuh/chatbot-py"
Repository    = "https://github.com/kwkuh/chatbot-py"
Issues        = "https://github.com/kwkuh/chatbot-py/issues"
Changelog     = "https://github.com/kwkuh/chatbot-py/blob/main/CHANGELOG.md"

[project.scripts]
chatbot-py = "cli:main"

[tool.setuptools]
packages = ["chatbot_py", "chatbot_py.providers"]
py-modules = ["cli", "app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
